Added javadoc to SimpleInferenceTest.